# RayTracing

./: CMakeLists.txt  Main.cpp  OutputFile.cpp  README.md
headers/: Camera.h  Mesh.h  ObjImporter.h  OutputFile.h  Ray.cpp  Ray.h  Raytracer.cpp  Raytracer.h  SceneObject.h  Triangle.h  pch.h
